# sn2md

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/scripts/: check_radon.sh
.github/workflows/: ci.yml
docs/20240511_075914/: 20240511_075914.md
docs/20240712_151149/: 20240712_151149.md
my_scripts_and_configs/: collect_md_png.sh  sn2md-digest.toml  sn2md.toml
sn2md/: importer.py  metadata.py  types.py
sn2md/importers/: atelier.py
tests/sn2md/: test_importer.py  test_metadata.py
